--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-/* BODY */
+
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
 }
 
-/* NAVBAR */
+
 header {
   position: fixed;
   width: 100%;
@@ -51,7 +51,7 @@ header {
   transform: scale(1.05);
 }
 
-/* HOME SECTION */
+
 .home {
   height: 100vh;
   width: 100%;
@@ -60,12 +60,12 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: rgb(252, 252, 252);
   text-align: center;
-  margin-top: 60px; /* për navbar */
+  margin-top: 60px; 
 }
 
-/* Overlay për kontrast */
+
 .home::before {
   content: "";
   position: absolute;
@@ -73,11 +73,11 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(133, 130, 130, 0.873);
   z-index: 0;
 }
 
-/* Content */
+
 .content {
   position: relative;
   z-index: 1;
@@ -99,7 +99,7 @@ header {
   color: #f1f1f1;
 }
 
-/* BUTTONS LOGIN/REGISTER */
+
 .buttons .btn {
   text-decoration: none;
   padding: 16px 36px;
@@ -124,10 +124,10 @@ header {
   background: #10ac84;
 }
 
-/* CONTACT US SECTION */
+
 .contact {
-  background-color: #f3e6e6;
-  color: #f1f1f1;
+  background-color: #e1dcdc;
+  color: #141212;
   padding: 60px 20px;
   text-align: center;
 }
@@ -163,7 +163,7 @@ header {
   color: #10ac84;
 }
 
-/* RESPONSIVE */
+
 @media (max-width: 768px) {
   .navbar {
     flex-direction: column;
